unpackaged/main/default/objects/OEM_Record__c/OEM_Record__c.object-meta.xml
<CustomObject>
    <description>All RFPs for Automotive OEM are generated here.</description>
    <label>OEM Record</label>
    <nameField>
        <displayFormat>OEM-{000000}</displayFormat>
        <label>OEM Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>