unpackaged/main/default/objects/OEM_Record__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>OEM Records</relationshipLabel>
    <relationshipName>OEM_Records</relationshipName>
    <type>Lookup</type>
</CustomField>