unpackaged/main/default/objects/OEM_Record__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OEM Records (Billing Contact)</relationshipLabel>
    <relationshipName>OEM_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>