unpackaged/main/default/objects/OEM_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>OEM Records</relationshipLabel>
    <relationshipName>OEM_Records</relationshipName>
    <type>Lookup</type>
</CustomField>