unpackaged/main/default/objects/OEM_Record__c/fields/OEM_Account__c.field-meta.xml
<CustomField>
    <fullName>OEM_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Account that requested the OEM project</inlineHelpText>
    <label>OEM Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OEM Records</relationshipLabel>
    <relationshipName>OEM_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>