unpackaged/main/default/objects/OEM_Record__c/fields/OEM_Program__c.field-meta.xml
<CustomField>
    <fullName>OEM_Program__c</fullName>
    <label>OEM Program</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>