unpackaged/main/default/objects/OEM_Record__c/fields/Program_End__c.field-meta.xml
<CustomField>
    <fullName>Program_End__c</fullName>
    <label>Program End</label>
    <type>Date</type>
</CustomField>