unpackaged/main/default/objects/OEM_Record__c/fields/Program_Start__c.field-meta.xml
<CustomField>
    <fullName>Program_Start__c</fullName>
    <label>Program Start</label>
    <type>Date</type>
</CustomField>