unpackaged/main/default/objects/OEM_Record__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <inlineHelpText>PO Number for the OEM Program</inlineHelpText>
    <label>Purchase Order</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>