unpackaged/main/default/objects/OEM_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OEM_Account__c</columns>
    <columns>OEM_Program__c</columns>
    <columns>Program_Start__c</columns>
    <columns>Program_End__c</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Contact__c</columns>
    <columns>Billing_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>